crates/gmsh/include/gmshc.h


GMSH_API void gmshModelGeoMeshSetSize(const int *dimTags, const size_t dimTags_n,
                                      const double size,
                                      int *ierr);
GMSH_API void gmshModelGeoMeshSetTransfiniteCurve(const int tag,
                                                  const int nPoints,
                                                  const char *meshType,
                                                  const double coef,
                                                  int *ierr);
GMSH_API void gmshModelGeoMeshSetTransfiniteSurface(const int tag,
                                                    const char *arrangement,
                                                    const int *cornerTags, const size_t cornerTags_n,
                                                    int *ierr);
GMSH_API void gmshModelGeoMeshSetTransfiniteVolume(const int tag,
                                                   const int *cornerTags, const size_t cornerTags_n,
                                                   int *ierr);
GMSH_API void gmshModelGeoMeshSetRecombine(const int dim,
                                           const int tag,
                                           const double angle,
                                           int *ierr);
GMSH_API void gmshModelGeoMeshSetSmoothing(const int dim,
                                           const int tag,
                                           const int val,
                                           int *ierr);
GMSH_API void gmshModelGeoMeshSetReverse(const int dim,
                                         const int tag,
                                         const int val,
                                         int *ierr);
GMSH_API void gmshModelGeoMeshSetAlgorithm(const int dim,
                                           const int tag,
                                           const int val,
                                           int *ierr);
GMSH_API void gmshModelGeoMeshSetSizeFromBoundary(const int dim,
                                                  const int tag,
                                                  const int val,
                                                  int *ierr);
GMSH_API int gmshModelOccAddPoint(const double x,
                                  const double y,
                                  const double z,
                                  const double meshSize,
                                  const int tag,
                                  int *ierr);
GMSH_API int gmshModelOccAddLine(const int startTag,
                                 const int endTag,
                                 const int tag,
                                 int *ierr);
GMSH_API int gmshModelOccAddCircleArc(const int startTag,
                                      const int middleTag,
                                      const int endTag,
                                      const int tag,
                                      const int center,
                                      int *ierr);
GMSH_API int gmshModelOccAddCircle(const double x,
                                   const double y,
                                   const double z,
                                   const double r,
                                   const int tag,
                                   const double angle1,
                                   const double angle2,
                                   const double *zAxis, const size_t zAxis_n,
                                   const double *xAxis, const size_t xAxis_n,
                                   int *ierr);
GMSH_API int gmshModelOccAddEllipseArc(const int startTag,
                                       const int centerTag,
                                       const int majorTag,
                                       const int endTag,
                                       const int tag,
                                       int *ierr);
GMSH_API int gmshModelOccAddEllipse(const double x,
                                    const double y,
                                    const double z,
                                    const double r1,
                                    const double r2,
                                    const int tag,
                                    const double angle1,
                                    const double angle2,
                                    const double *zAxis, const size_t zAxis_n,
                                    const double *xAxis, const size_t xAxis_n,
                                    int *ierr);
GMSH_API int gmshModelOccAddSpline(const int *pointTags, const size_t pointTags_n,
                                   const int tag,
                                   const double *tangents, const size_t tangents_n,
                                   int *ierr);
GMSH_API int gmshModelOccAddBSpline(const int *pointTags, const size_t pointTags_n,
                                    const int tag,
                                    const int degree,
                                    const double *weights, const size_t weights_n,
                                    const double *knots, const size_t knots_n,
                                    const int *multiplicities, const size_t multiplicities_n,
                                    int *ierr);
GMSH_API int gmshModelOccAddBezier(const int *pointTags, const size_t pointTags_n,
                                   const int tag,
                                   int *ierr);
GMSH_API int gmshModelOccAddWire(const int *curveTags, const size_t curveTags_n,
                                 const int tag,
                                 const int checkClosed,
                                 int *ierr);
GMSH_API int gmshModelOccAddCurveLoop(const int *curveTags, const size_t curveTags_n,
                                      const int tag,
                                      int *ierr);
GMSH_API int gmshModelOccAddRectangle(const double x,
                                      const double y,
                                      const double z,
                                      const double dx,
                                      const double dy,
                                      const int tag,
                                      const double roundedRadius,
                                      int *ierr);
GMSH_API int gmshModelOccAddDisk(const double xc,
                                 const double yc,
                                 const double zc,
                                 const double rx,
                                 const double ry,
                                 const int tag,
                                 const double *zAxis, const size_t zAxis_n,
                                 const double *xAxis, const size_t xAxis_n,
                                 int *ierr);
GMSH_API int gmshModelOccAddPlaneSurface(const int *wireTags, const size_t wireTags_n,
                                         const int tag,
                                         int *ierr);
GMSH_API int gmshModelOccAddSurfaceFilling(const int wireTag,
                                           const int tag,
                                           const int *pointTags, const size_t pointTags_n,
                                           const int degree,
                                           const int numPointsOnCurves,
                                           const int numIter,
                                           const int anisotropic,
                                           const double tol2d,
                                           const double tol3d,
                                           const double tolAng,
                                           const double tolCurv,
                                           const int maxDegree,
                                           const int maxSegments,
                                           int *ierr);
GMSH_API int gmshModelOccAddBSplineFilling(const int wireTag,
                                           const int tag,
                                           const char *type,
                                           int *ierr);
GMSH_API int gmshModelOccAddBezierFilling(const int wireTag,
                                          const int tag,
                                          const char *type,
                                          int *ierr);
GMSH_API int gmshModelOccAddBSplineSurface(const int *pointTags, const size_t pointTags_n,
                                           const int numPointsU,
                                           const int tag,
                                           const int degreeU,
                                           const int degreeV,
                                           const double *weights, const size_t weights_n,
                                           const double *knotsU, const size_t knotsU_n,
                                           const double *knotsV, const size_t knotsV_n,
                                           const int *multiplicitiesU, const size_t multiplicitiesU_n,
                                           const int *multiplicitiesV, const size_t multiplicitiesV_n,
                                           const int *wireTags, const size_t wireTags_n,
                                           const int wire3D,
                                           int *ierr);
GMSH_API int gmshModelOccAddBezierSurface(const int *pointTags, const size_t pointTags_n,
                                          const int numPointsU,
                                          const int tag,
                                          const int *wireTags, const size_t wireTags_n,
                                          const int wire3D,
                                          int *ierr);
GMSH_API int gmshModelOccAddTrimmedSurface(const int surfaceTag,
                                           const int *wireTags, const size_t wireTags_n,
                                           const int wire3D,
                                           const int tag,
                                           int *ierr);
GMSH_API int gmshModelOccAddSurfaceLoop(const int *surfaceTags, const size_t surfaceTags_n,
                                        const int tag,
                                        const int sewing,
                                        int *ierr);
GMSH_API int gmshModelOccAddVolume(const int *shellTags, const size_t shellTags_n,
                                   const int tag,
                                   int *ierr);
GMSH_API int gmshModelOccAddSphere(const double xc,
                                   const double yc,
                                   const double zc,
                                   const double radius,
                                   const int tag,
                                   const double angle1,
                                   const double angle2,
                                   const double angle3,
                                   int *ierr);
GMSH_API int gmshModelOccAddBox(const double x,
                                const double y,
                                const double z,
                                const double dx,
                                const double dy,
                                const double dz,
                                const int tag,
                                int *ierr);
GMSH_API int gmshModelOccAddCylinder(const double x,
                                     const double y,
                                     const double z,
                                     const double dx,
                                     const double dy,
                                     const double dz,
                                     const double r,
                                     const int tag,
                                     const double angle,
                                     int *ierr);
GMSH_API int gmshModelOccAddCone(const double x,
                                 const double y,
                                 const double z,
                                 const double dx,
                                 const double dy,
                                 const double dz,
                                 const double r1,
                                 const double r2,
                                 const int tag,
                                 const double angle,
                                 int *ierr);
GMSH_API int gmshModelOccAddWedge(const double x,
                                  const double y,
                                  const double z,
                                  const double dx,
                                  const double dy,
                                  const double dz,
                                  const int tag,
                                  const double ltx,
                                  const double *zAxis, const size_t zAxis_n,
                                  int *ierr);
GMSH_API int gmshModelOccAddTorus(const double x,
                                  const double y,
                                  const double z,
                                  const double r1,
                                  const double r2,
                                  const int tag,
                                  const double angle,
                                  const double *zAxis, const size_t zAxis_n,
                                  int *ierr);