crates/gmsh/src/bindings.rs

unsafe extern "C" {
    pub fn gmshModelGeoMeshSetSize(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        size: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMeshSetTransfiniteCurve(
        tag: ::std::os::raw::c_int,
        nPoints: ::std::os::raw::c_int,
        meshType: *const ::std::os::raw::c_char,
        coef: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMeshSetTransfiniteSurface(
        tag: ::std::os::raw::c_int,
        arrangement: *const ::std::os::raw::c_char,
        cornerTags: *const ::std::os::raw::c_int,
        cornerTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMeshSetTransfiniteVolume(
        tag: ::std::os::raw::c_int,
        cornerTags: *const ::std::os::raw::c_int,
        cornerTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMeshSetRecombine(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        angle: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMeshSetSmoothing(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMeshSetReverse(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMeshSetAlgorithm(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMeshSetSizeFromBoundary(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        val: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelOccAddPoint(
        x: f64,
        y: f64,
        z: f64,
        meshSize: f64,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddLine(
        startTag: ::std::os::raw::c_int,
        endTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddCircleArc(
        startTag: ::std::os::raw::c_int,
        middleTag: ::std::os::raw::c_int,
        endTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        center: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddCircle(
        x: f64,
        y: f64,
        z: f64,
        r: f64,
        tag: ::std::os::raw::c_int,
        angle1: f64,
        angle2: f64,
        zAxis: *const f64,
        zAxis_n: usize,
        xAxis: *const f64,
        xAxis_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddEllipseArc(
        startTag: ::std::os::raw::c_int,
        centerTag: ::std::os::raw::c_int,
        majorTag: ::std::os::raw::c_int,
        endTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddEllipse(
        x: f64,
        y: f64,
        z: f64,
        r1: f64,
        r2: f64,
        tag: ::std::os::raw::c_int,
        angle1: f64,
        angle2: f64,
        zAxis: *const f64,
        zAxis_n: usize,
        xAxis: *const f64,
        xAxis_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddSpline(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        tag: ::std::os::raw::c_int,
        tangents: *const f64,
        tangents_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddBSpline(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        tag: ::std::os::raw::c_int,
        degree: ::std::os::raw::c_int,
        weights: *const f64,
        weights_n: usize,
        knots: *const f64,
        knots_n: usize,
        multiplicities: *const ::std::os::raw::c_int,
        multiplicities_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddBezier(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddWire(
        curveTags: *const ::std::os::raw::c_int,
        curveTags_n: usize,
        tag: ::std::os::raw::c_int,
        checkClosed: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddCurveLoop(
        curveTags: *const ::std::os::raw::c_int,
        curveTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddRectangle(
        x: f64,
        y: f64,
        z: f64,
        dx: f64,
        dy: f64,
        tag: ::std::os::raw::c_int,
        roundedRadius: f64,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddDisk(
        xc: f64,
        yc: f64,
        zc: f64,
        rx: f64,
        ry: f64,
        tag: ::std::os::raw::c_int,
        zAxis: *const f64,
        zAxis_n: usize,
        xAxis: *const f64,
        xAxis_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddPlaneSurface(
        wireTags: *const ::std::os::raw::c_int,
        wireTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddSurfaceFilling(
        wireTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        degree: ::std::os::raw::c_int,
        numPointsOnCurves: ::std::os::raw::c_int,
        numIter: ::std::os::raw::c_int,
        anisotropic: ::std::os::raw::c_int,
        tol2d: f64,
        tol3d: f64,
        tolAng: f64,
        tolCurv: f64,
        maxDegree: ::std::os::raw::c_int,
        maxSegments: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddBSplineFilling(
        wireTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        type_: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddBezierFilling(
        wireTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        type_: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddBSplineSurface(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        numPointsU: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        degreeU: ::std::os::raw::c_int,
        degreeV: ::std::os::raw::c_int,
        weights: *const f64,
        weights_n: usize,
        knotsU: *const f64,
        knotsU_n: usize,
        knotsV: *const f64,
        knotsV_n: usize,
        multiplicitiesU: *const ::std::os::raw::c_int,
        multiplicitiesU_n: usize,
        multiplicitiesV: *const ::std::os::raw::c_int,
        multiplicitiesV_n: usize,
        wireTags: *const ::std::os::raw::c_int,
        wireTags_n: usize,
        wire3D: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddBezierSurface(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        numPointsU: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        wireTags: *const ::std::os::raw::c_int,
        wireTags_n: usize,
        wire3D: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddTrimmedSurface(
        surfaceTag: ::std::os::raw::c_int,
        wireTags: *const ::std::os::raw::c_int,
        wireTags_n: usize,
        wire3D: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddSurfaceLoop(
        surfaceTags: *const ::std::os::raw::c_int,
        surfaceTags_n: usize,
        tag: ::std::os::raw::c_int,
        sewing: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddVolume(
        shellTags: *const ::std::os::raw::c_int,
        shellTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddSphere(
        xc: f64,
        yc: f64,
        zc: f64,
        radius: f64,
        tag: ::std::os::raw::c_int,
        angle1: f64,
        angle2: f64,
        angle3: f64,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddBox(
        x: f64,
        y: f64,
        z: f64,
        dx: f64,
        dy: f64,
        dz: f64,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddCylinder(
        x: f64,
        y: f64,
        z: f64,
        dx: f64,
        dy: f64,
        dz: f64,
        r: f64,
        tag: ::std::os::raw::c_int,
        angle: f64,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddCone(
        x: f64,
        y: f64,
        z: f64,
        dx: f64,
        dy: f64,
        dz: f64,
        r1: f64,
        r2: f64,
        tag: ::std::os::raw::c_int,
        angle: f64,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddWedge(
        x: f64,
        y: f64,
        z: f64,
        dx: f64,
        dy: f64,
        dz: f64,
        tag: ::std::os::raw::c_int,
        ltx: f64,
        zAxis: *const f64,
        zAxis_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelOccAddTorus(
        x: f64,
        y: f64,
        z: f64,
        r1: f64,
        r2: f64,
        tag: ::std::os::raw::c_int,
        angle: f64,
        zAxis: *const f64,
        zAxis_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
